--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@
   height:68px;
   color: white;
   background: linear-gradient(90deg, #1F2D5C 0%, #32C4C0 100%);
+  box-shadow: 5px 8px 8px 0 rgba(50, 196, 192, 0.50);
 cursor: pointer;
 ;
  }
@@ -52,4 +53,8 @@ cursor: pointer;
 .bg-footer{
   background: linear-gradient(180deg, #042822 0%, #1C1C1C 100%);
 
+}
+
+.bg-size{
+  size: 30px;
 }
