--- a/src/index.css
+++ b/src/index.css
@@ -23,15 +23,35 @@
   background: linear-gradient(90deg, #1F2D5C 0%, #32C4C0 100%);
   box-shadow: 5px 8px 8px 0 rgba(50, 196, 192, 0.50);
 cursor: pointer;
+animation: fadeUp 1s ease-out forwards;
 ;
  }
- .btn-hover{
-   background: linear-gradient(90deg, #202C59 0%, #112E9B 100%);
-   border-radius: 5.35px;
-   height: 38.32px;
-   color:white;
-   cursor: pointer;
-;
+  @keyframes fadeUp {
+            from {
+                opacity: 0;
+                transform: translateY(50px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+ .btn-hover {
+  background: linear-gradient(90deg, #202C59 0%, #112E9B 100%);
+  border-radius: 5.35px;
+  height: 38.32px;
+  color: white;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+
+.btn-hover:hover {
+  background: linear-gradient(90deg, #ff0000 0%, #b30000 100%);
+  color: white;
+}
+.bg-gradient {
+  background: linear-gradient(90deg, #1F2D5C 0%, #32C4C0 100%);
  }
 /* .bg-color {
   background: linear-gradient(90deg, rgba(31, 45, 92, 0.8) 0%, rgba(50, 196, 192, 0.8) 100%);
@@ -57,4 +77,58 @@ cursor: pointer;
 
 .bg-size{
   size: 30px;
+}
+
+
+/* .animate-number {
+         
+            animation: fadeUp 1s ease-out forwards;
+        } */
+
+
+          @keyframes fadeUp {
+            from {
+                opacity: 0;
+                transform: translateY(50px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+.btn-news {
+  border-radius: 47px;
+  height: 68px;
+  color: white;
+  background: linear-gradient(90deg, #1F2D5C 0%, #32C4C0 100%);
+  box-shadow: 5px 8px 8px 0 rgba(50, 196, 192, 0.50);
+cursor: pointer;
+animation: fadeUp 1s ease-out forwards;
+;
+ }
+ .btn-news:hover {
+  background: #C5C5C5;
+  box-shadow: none;
+  color: white;
+}
+@keyframes slideDownReveal {
+  0% {
+    opacity: 0;
+    transform: translateY(-100%);
+    background-color: rgba(255, 255, 255, 1);
+  }
+  50% {
+    opacity: 0.5;
+    background-color: rgba(255, 255, 255, 0.5);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+    background-color: transparent;
+  }
+}
+
+.animate-slideDownReveal {
+  animation: slideDownReveal 1.5s ease-in-out forwards;
 }
