--- a/src/index.css
+++ b/src/index.css
@@ -1,42 +1,46 @@
-
 @import "tailwindcss";
 
-.btn-primary{
+.btn-primary {
   background-color: #CDE4DC;
   border-radius: 47px;
   color: black;
   height: 68px;
   cursor: pointer;
 }
- .btn-secondary{
+
+.btn-secondary {
   border: 2px solid;
   height: 43px;
   border-radius: 21.5px;
   color: white;
-  border-color:#CDE4DC;
+  border-color: #CDE4DC;
   cursor: pointer;
- }
- .btn-tertiary{
-  border-radius: 47px; 
-  height:68px;
+}
+
+.btn-tertiary {
+  border-radius: 47px;
+  height: 68px;
   color: white;
   background: linear-gradient(90deg, #1F2D5C 0%, #32C4C0 100%);
   box-shadow: 5px 8px 8px 0 rgba(50, 196, 192, 0.50);
-cursor: pointer;
-animation: fadeUp 1s ease-out forwards;
-;
- }
-  @keyframes fadeUp {
-            from {
-                opacity: 0;
-                transform: translateY(50px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
- .btn-hover {
+  cursor: pointer;
+  animation: fadeUp 1s ease-out forwards;
+  ;
+}
+
+@keyframes fadeUp {
+  from {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.btn-hover {
   background: linear-gradient(90deg, #202C59 0%, #112E9B 100%);
   border-radius: 5.35px;
   height: 38.32px;
@@ -51,32 +55,36 @@ animation: fadeUp 1s ease-out forwards;
   box-shadow: none;
   color: white;
 }
+
 .bg-gradient {
   background: linear-gradient(90deg, #1F2D5C 0%, #32C4C0 100%);
- }
+}
+
 /* .bg-color {
   background: linear-gradient(90deg, rgba(31, 45, 92, 0.8) 0%, rgba(50, 196, 192, 0.8) 100%);
 } */
 .bg-image {
   width: 100%;
   height: 400px;
-  background-image: url('/assets/images/mask1.png'); /* Starts with slash */
+  background-image: url('/assets/images/mask1.png');
+  /* Starts with slash */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
-.ant-switch-inner{
- background: linear-gradient(180deg, #32C4C0 0%, #1F2D5C 99.09%);
-;
+
+.ant-switch-inner {
+  background: linear-gradient(180deg, #32C4C0 0%, #1F2D5C 99.09%);
+  ;
 }
 
 
-.bg-footer{
+.bg-footer {
   background: linear-gradient(180deg, #042822 0%, #1C1C1C 100%);
 
 }
 
-.bg-size{
+.bg-size {
   size: 30px;
 }
 
@@ -87,16 +95,17 @@ animation: fadeUp 1s ease-out forwards;
         } */
 
 
-          @keyframes fadeUp {
-            from {
-                opacity: 0;
-                transform: translateY(50px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
+@keyframes fadeUp {
+  from {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 
 .btn-news {
   border-radius: 47px;
@@ -104,25 +113,29 @@ animation: fadeUp 1s ease-out forwards;
   color: white;
   background: linear-gradient(90deg, #1F2D5C 0%, #32C4C0 100%);
   box-shadow: 5px 8px 8px 0 rgba(50, 196, 192, 0.50);
-cursor: pointer;
-animation: fadeUp 1s ease-out forwards;
-;
- }
- .btn-news:hover {
+  cursor: pointer;
+  animation: fadeUp 1s ease-out forwards;
+  ;
+}
+
+.btn-news:hover {
   background: #C5C5C5;
   box-shadow: none;
   color: white;
 }
+
 @keyframes slideDownReveal {
   0% {
     opacity: 0;
     transform: translateY(-100%);
     background-color: rgba(255, 255, 255, 1);
   }
+
   50% {
     opacity: 0.5;
     background-color: rgba(255, 255, 255, 0.5);
   }
+
   100% {
     opacity: 1;
     transform: translateY(0);
@@ -132,4 +145,21 @@ animation: fadeUp 1s ease-out forwards;
 
 .animate-slideDownReveal {
   animation: slideDownReveal 1.5s ease-in-out forwards;
+}
+
+.btn-Ai {
+ 
+
+
+  @apply bg-[#A7A7A7]/30 !text-black   rounded-[35px]
+}
+.btn-Secure {
+ 
+
+
+  @apply bg-[#FFF]/30 !text-white w-[205px] h-[47px]  rounded-[35px]
+}
+.Newsletter{
+  background: linear-gradient(90deg, #000428 0%, #004E92 100%);
+  /* padding: 40px; */
 }
