--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
-*{
-    font-family: 'Inter', 'Poppins', sans-serif;
+
+* {
+  font-family: 'Inter', 'Poppins', sans-serif;
 }
 
 .btn-primary {
@@ -70,7 +71,6 @@
   width: 100%;
   height: 400px;
   background-image: url('/assets/images/mask1.png');
-  /* Starts with slash */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -90,13 +90,6 @@
 .bg-size {
   size: 30px;
 }
-
-
-/* .animate-number {
-         
-            animation: fadeUp 1s ease-out forwards;
-        } */
-
 
 @keyframes fadeUp {
   from {
@@ -151,18 +144,28 @@
 }
 
 .btn-Ai {
- 
 
 
-  @apply bg-[#A7A7A7]/30 !text-black   rounded-[35px]
+
+  @apply bg-[#A7A7A7]/30 !text-black rounded-[35px]
 }
+
 .btn-Secure {
- 
 
 
-  @apply bg-[#FFF]/30 !text-white w-[205px] h-[47px]  rounded-[35px]
+
+  @apply bg-[#FFF]/30 !text-white w-[205px] h-[47px] rounded-[35px]
 }
-.Newsletter{
+
+.Newsletter {
   background: linear-gradient(90deg, #000428 0%, #004E92 100%);
-  /* padding: 40px; */
+}
+
+.btn-tertiar {
+  height: 59px;
+  color: white;
+  cursor: pointer;
+  border-radius: 50px;
+  background: linear-gradient(270deg, #32C4C0 0%, #1F2D5C 100%);
+  box-shadow: 0 10px 40px 0 #32C4C0;
 }
